config/deployment-api.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: aspdb-api
  namespace: aspdb-ns
spec:
  replicas: 1
  selector:
    matchLabels:
      app: aspdb-api
  template:
    metadata:
      labels:
        app: aspdb-api
    spec:
      securityContext:
        fsGroupChangePolicy: OnRootMismatch
        fsGroup: 101
        runAsNonRoot: true
        seccompProfile:
          type: RuntimeDefault
      containers:
        - name: api
          image: cerit.io/maxstetina/aspdb-blast:latest
          imagePullPolicy: Always
          command: ["python", "-m", "uvicorn"]
          args:
            - "app.main:app"
            - "--host"
            - "0.0.0.0"
            - "--port"
            - "8080"
            - "--no-access-log"
          securityContext:
            runAsUser: 101
            runAsGroup: 101
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
          resources:
            requests:
              cpu: 500m
              memory: 2Gi
            limits:
              cpu: 2
              memory: 8Gi
          volumeMounts:
            - name: blast-volume
              mountPath: /blast
            - name: api-code
              mountPath: /app/app/main.py
              subPath: main.py
              readOnly: true
      volumes:
        - name: blast-volume
          persistentVolumeClaim:
            claimName: asparaginase-blast-database
        - name: api-code
          configMap:
            name: aspdb-api-code
