config/service-api.yaml
apiVersion: v1
kind: Service
metadata:
  name: aspdb-api
  namespace: aspdb-ns
  labels:
    app: aspdb-api
spec:
  ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
  selector:
    app: aspdb-api
