config/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx
  namespace: krenek-ns
  labels:
    app: nginx
spec:
  ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
  selector:
    app: nginx
