config/ingress-api.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: blast-api
  namespace: aspdb-ns
  annotations:
    kubernetes.io/ingress.class: "nginx"
    kubernetes.io/tls-acme: "true"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/enable-access-log: "false"
    nginx.ingress.kubernetes.io/proxy-body-size: 2m
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - "asparaginasedb.cz"
        - "asparaginasedb.com"
      secretName: asparaginasedb-cz-tls
  rules:
    - host: "asparaginasedb.cz"
      http:
        paths:
          - backend:
              service:
                name: aspdb-api
                port:
                  number: 8080
            pathType: Prefix
            path: "/api/blast"
    - host: "asparaginasedb.com"
      http:
        paths:
          - backend:
              service:
                name: aspdb-api
                port:
                  number: 8080
            pathType: Prefix
            path: "/api/blast"
