config/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx
  namespace: aspdb-ns
  annotations:
    kubernetes.io/ingress.class: "nginx"
    kubernetes.io/tls-acme: "true"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/proxy-body-size: 300m
    ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/from-to-www-redirect: "true"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - "asparaginasedb.cz"
        - "www.asparaginasedb.cz"
        - "asparaginasedb.com"
        - "www.asparaginasedb.com"
      secretName: asparaginasedb-cz-tls
  rules: 
    - host: "asparaginasedb.cz"
      http:
        paths:
          - backend:
              service:
                name: nginx
                port:
                  number: 8080
            pathType: Prefix
            path: "/"
          - backend:
              service:
                name: aspdb-api
                port:
                  number: 8080
            pathType: Prefix
            path: "/api" 
    - host: "asparaginasedb.com"
      http:
        paths:
          - backend:
              service:
                name: nginx
                port:
                  number: 8080
            pathType: Prefix
            path: "/"
          - backend:
              service:
                name: aspdb-api
                port:
                  number: 8080
            pathType: Prefix
            path: "/api"
